[build-system]
requires = [
    "setuptools>=77.0",
    "wheel",
    "conan>=1.50.0,<2.0",
    "cmake<4.0",
    'uiucprescon.build @ https://github.com/UIUCLibrary/uiucprescon_build/archive/refs/tags/v0.2.5.tar.gz'

]

build-backend = "uiucprescon.build"


[project]
name = "uiucprescon.imagevalidate"
version = "0.1.10.dev4"
dependencies = [
    "py3exiv2bind>=0.1.9"
]
requires-python = ">=3.9"
readme = "README.rst"
license = "NCSA"
license-files = ["LICENSE"]
authors = [
    {name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"},
]
maintainers = [
    {name = "Henry Borchers", email = "hborcher@illinois.edu"}
]
description = "Validate image metadata"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
[project.urls]
Documentation = "https://www.library.illinois.edu/dccdocs/imagevalidate"
Download = "https://github.com/UIUCLibrary/imagevalidate"

[tool.setuptools]
packages = [
    "uiucprescon.imagevalidate",
    "uiucprescon.imagevalidate.profiles",
]
include-package-data = false

[tool.setuptools.package-data]
"uiucprescon.imagevalidate" = ["py.typed"]

[tool.coverage.run]
relative_files = true
branch = true


[tool.mypy]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--verbose"
norecursedirs = "build"
markers = "integration"
junit_family="xunit2"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
manylinux-x86_64-image = "manylinux2014"
build-frontend = "build[uv]"
skip = [
    "cp36-*",
    "cp37-*",
    "cp38-*",
    "pp*",
    "*-win32",
    "*-musllinux*",
    "*-manylinux_i686"
]
build-verbosity = 1
environment-pass = ["CONAN_COMPILER_LIBCXX", "CONAN_COMPILER_VERSION", "CONAN_USER_HOME", "PIP_EXTRA_INDEX_URL", "UV_EXTRA_INDEX_URL", "UV_INDEX_STRATEGY"]

[tool.cibuildwheel.windows]
before-all = [
    "pip install wheel",
    "pip install -r requirements-dev.txt uv",
    "conan profile new default --detect --force",
    "conan profile update settings.compiler.version=%CONAN_COMPILER_VERSION% default",
    "conan install ./ --build missing",
]
[tool.cibuildwheel.windows.environment]
CONAN_USER_HOME="$TEMP/conan"

[tool.cibuildwheel.macos]
before-all = [
    "pip3 install -r requirements-dev.txt uv",
    "conan profile new $ENVTMPDIR/.conan/profiles/default --detect --force",
    "if [ -z \"$CONAN_COMPILER_VERSION\" ]; then : ; else conan profile update settings.compiler.version=$CONAN_COMPILER_VERSION default; fi",
    "conan install ./ --build missing --install-folder=$CONAN_BUILD_INFO_DIR"
]
environment-pass = ["CONAN_COMPILER_VERSION", "CONAN_USER_HOME"]
repair-wheel-command = [
  "delocate-listdeps {wheel}",
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.macos.environment]
ENVTMPDIR="/tmp/conan"
CONAN_USER_HOME="/tmp/conan"
CONAN_DEFAULT_PROFILE_PATH="/tmp/conan/.conan/profiles/default"
CONAN_BUILD_INFO_DIR="/tmp/conan/build/"


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
before-all = [
    "cc --version", "cc -dumpfullversion -dumpversion",
    "uvx --index-strategy=unsafe-first-match --with $(grep ^conan requirements-dev.txt)  conan profile new /tmp/conan/.conan/profiles/default --detect",
    "if [ -z \"$CONAN_COMPILER_LIBCXX\" ];  then : ; else uvx --index-strategy=unsafe-first-match --with $(grep ^conan requirements-dev.txt) conan profile update settings.compiler.libcxx=$CONAN_COMPILER_LIBCXX   default; fi",
    "if [ -z \"$CONAN_COMPILER_VERSION\" ]; then : ; else uvx --index-strategy=unsafe-first-match --with $(grep ^conan requirements-dev.txt) conan profile update settings.compiler.version=$CONAN_COMPILER_VERSION default; fi",
    "uvx --index-strategy=unsafe-first-match --with $(grep ^conan requirements-dev.txt) conan profile show default",
    "uvx --index-strategy=unsafe-first-match --with $(grep ^conan requirements-dev.txt) conan install ./ --build missing -pr:b=default",

]
[tool.cibuildwheel.linux.environment]
CONAN_USER_HOME="/tmp/conan"
CONAN_DEFAULT_PROFILE_PATH="/tmp/conan/.conan/profiles/default"
CONAN_BUILD_INFO_DIR="/tmp/conan/build/"
PYTHONFAULTHANDLER="True"
