[metadata]
name = uiucprescon.imagevalidate
version = 0.1.5.dev6
url = http://www.library.illinois.edu/dccdocs/imagevalidate
download_url = https://github.com/UIUCLibrary/imagevalidate
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Validate image metadata
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu

[options]
python_requires = >= 3.6
zip_safe = False

[mypy]
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
addopts = --verbose --strict
norecursedirs = build
markers = integration
junit_family=xunit1

[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = build/docs
config-dir = docs/source
all_files  = 1
